--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-response-size",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Vue response size library",
   "main": "dist/vue-response-size.umd.js",
   "module": "dist/vue-response-size.es.js",
@@ -36,5 +36,9 @@
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "vue": "^3.2.47"
   }
 }
