--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "unpkg": "dist/vue-response-size.min.js",
   "scripts": {
     "build:umd": "rollup --config ./build/rollup.config.umd.js",
-    "build:browser": "rollup --config ./build/rollup.config.min.js",
+    "build:browser": "rollup --config ./build/rollup.config.browser.js",
     "build:es": "rollup --config ./build/rollup.config.es.js",
-    "build": "npm run build:umd && npm run build:browser && npm run build:es"
+    "build:dts": "rollup --config ./build/rollup.config.dts.js",
+    "build": "npm run build:umd && npm run build:browser && npm run build:es && npm build:dts"
   },
   "keywords": [
     "vue",
@@ -23,22 +24,23 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "rollup": "^2.36.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-eslint": "^9.0.3",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@types/lodash-es": "^4.17.6",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.35.0",
+    "prettier": "^2.8.4",
+    "rollup": "^2.60.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-dts": "^5.2.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.1",
+    "typescript": "^4.5.2"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "vue": "^3.2.47"
   }
 }
