--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "vue-response-size",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Vue3 response size library",
   "main": "dist/vue-response-size.umd.js",
-  "module": "dist/vue-response-size.es.js",
+  "module": "dist/vue-response-size.esm.js",
   "unpkg": "dist/vue-response-size.min.js",
   "scripts": {
     "build:umd": "rollup --config ./build/rollup.config.umd.js",
