--- a/demo-v3/package.json
+++ b/demo-v3/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "element-plus": "^2.2.34",
     "vue": "^3.2.45",
+    "vue-response-size": "^2.0.3",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
